--- a/bower.json
+++ b/bower.json
@@ -20,5 +20,9 @@
     "bower_components",
     "test",
     "tests"
-  ]
+  ],
+  "dependencies": {
+    "angular": "~1.2.21",
+    "openlayers": "~2.13.1"
+  }
 }
