--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
   "devDependencies": {
     "bower": "~1.3.8",
     "grunt": "~0.4.5",
+    "grunt-angular-templates": "~0.5.7",
+    "grunt-bower-task": "~0.4.0",
     "grunt-contrib-clean": "~0.6.0",
     "grunt-contrib-compress": "~0.10.0",
     "grunt-contrib-cssmin": "~0.10.0",
