--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "grunt-bower-task": "~0.4.0",
     "grunt-contrib-clean": "~0.6.0",
     "grunt-contrib-compress": "~0.10.0",
+    "grunt-contrib-concat": "~0.4.0",
+    "grunt-contrib-copy": "~0.5.0",
     "grunt-contrib-cssmin": "~0.10.0",
     "grunt-contrib-uglify": "~0.5.1",
     "karma": "~0.12.20",
