--- a/bower.json
+++ b/bower.json
@@ -23,6 +23,7 @@
   ],
   "dependencies": {
     "angular": "~1.2.21",
-    "openlayers": "~2.13.1"
+    "ol3": "https://github.com/openlayers/ol3.git",
+    "openlayers": "*"
   }
 }
